# evita-module-demo

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Makefile  README.md  index.html  objects.inv  pylock.toml  pyproject.toml  searchindex.js
.github/workflows/: sphinx.yml
_sources/episodes/: Python-HPDA-0-SoftwareSetup.ipynb.txt  Python-HPDA-1-Motivation.ipynb.txt  Python-HPDA-2-EfficientArrayComputing-markdown.md.txt
_sources/episodes/quiz/: quiz_in_episodes.md.txt
_sources/reference/: structure-evita-module.md.txt
branch/main/_sources/: index.md.txt  instructor-guide.md.txt  reference-for-learners.md.txt
branch/main/_sources/episodes/: ModuleName-1-EpisodeName.md.txt  Python-HPDA-2-EfficientArrayComputing-pdf.md.txt  Python-HPDA-2-EfficientArrayComputing.ipynb.txt
branch/main/episodes/Python-HPDA-0-SoftwareSetup/: index.html
branch/main/episodes/Python-HPDA-2-EfficientArrayComputing/: index.html
branch/main/episodes/Python-HPDA-2-EfficientArrayComputing-markdown/: index.html
branch/main/episodes/Python-HPDA-2-EfficientArrayComputing-pdf/: index.html
branch/main/episodes/quiz/solution_for_quiz_in_episodes/: index.html
branch/main/genindex/: index.html
branch/main/instructor-guide/: index.html
branch/main/reference-for-learners/: index.html
branch/main/reference/structure-evita-module/: index.html
branch/main/search/: index.html
branch/main/singlehtml/: index.html  objects.inv
content/: conf.py
episodes/ModuleName-1-EpisodeName/: index.html
episodes/Python-HPDA-1-Motivation/: index.html
episodes/quiz/quiz_in_episodes/: index.html
(+1 files in other folders)
