[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "evita-material-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupytext>=1.18.1",
    "myst-nb>=1.3.0",
    "sphinx>=8.2.3",
    "sphinx-evita @ https://github.com/ENCCS/sphinx-evita/archive/refs/tags/v0.1.0b1.zip",
    "sphinx-lesson>=0.8.16",
    "sphinxcontrib-bibtex>=2.6.5",
]

[dependency-groups]
dev = [
    {include-group = "notebook"},
    "jupyterlab>=4.4.6",
    "jupyterlab-myst>=2.4.2",
]
# All dependencies used within Jupyter Notebooks
notebook = [
    "hvplot>=0.12.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "scipy>=1.16.1",
]

[tool.pdm]
distribution = false
